# gol

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/: simulation.h
src/: CMakeLists.txt  main.c  nuklear_impl.c  simulation.c
